--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
 </head>
 <body>
   <div id="photoBooth">
-    <p class="banner">sams IS219 Slide Show</p>
+    <p class="banner">IS219 Slide Show</p>
     <div id="slideShow">
       <div class="photoHolder">
         <img class="thumbnail" id="photo" src="http://placehold.it/518x389?text=Welcome+to+my+Gallery" alt="Gallery Image"/>
-        <img class="moreIndicator rot90" src="img/more.png" alt="More Content"/>
+        <img class="moreIndicator rot90" src="img/more.png" alt="More Content" />
       </div>
-      
       <div id="nav">
         <img id="prevPhoto" class='rot180' src="img/arrow.png" alt="Previous Photo"/>
         <img id="nextPhoto" src="img/arrow.png" alt="Next Photo"/>
